re PR preprocessor/9465 (tradcpp0 segfaults on nul bytes)

PR preprocessor/9465
	* tradcpp.c (fixup_newlines): Use memchr instead of strchr.

From-SVN: r62280